api specの変なところを修正
